----------
v6.3.0-git
----------

[mms] Add 'dynamic_prefs' hook to allow for changing of default values for
      browser-based preferences in dynamic view.
[mms] Removed compose 'use_vfs' configuration option.
[mjr] Add IMP_Api::addFlags().
[mms] Allow multiple independent attachment actions on the dynamic compose
      screen.
[mms] Add upload progress bar in dynamic compose screen when adding
      attachments.
[mms] Uniquely identify sent-mail mailboxes by identity in main folder tree
      (Request #12721).
[mms] Don't send empty text part if a message contains attachments.
[mms] Add button to allow folder tree to be rebuilt in smartmobile view.
[mms] Add option to poll mailbox for new mailbox when creating a mailbox
      (Request #13227).


------
v6.2.2
------

[mms] Ensure that search/POP3 mailbox listings are saved even if there is an
      issue with the underlying cache backend.
[mms] Fix replying to non-UTF-8 messages when the 'reply_charset' preference
      is true.
[jan] Fix vCard MIME viewer.
[jan] Fix MIME viewer form actions in basic view (Bug #12677).
[mms] Don't store/retrieve message history data if the Message-ID is
      missing/invalid.
[mms] Fix resuming draft from mailbox page in basic view.
[mms] Fix displaying Virtual Trash mailbox (Bug #13418).
[mms] Fix menu actions on the minimal message page (Bug #13440).
[jan] Fix switching to HTML editor in basic mode if signature display is not
      active.
[mms] Fix expiring session cached mailbox data when mailbox information
      changes.
[mms] Fix updating viewport immediately after deleting messages on POP3
      servers.


------
v6.2.1
------

[mjr] Fix iTip handling when recurrence exceptions are present (Bug #13399).
[mms] Fix displaying Sent mailbox label when multiple sent-mail mailboxes are
      defined.
[mms] Fix advanced search in all mailboxes if virtual folders or remote
      accounts exist (Bug #13384).