@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Implement lazy loading for images in HTML messages in dynamic view.
 * [mms] Add &apos;dynamic_prefs&apos; hook to allow for changing of default values for browser-based preferences in dynamic view.
 * [mms] Removed compose &apos;use_vfs&apos; configuration option.
 * [mjr] Add IMP_Api::addFlags().
